# Streamlit_ML_OPS

./: Dockerfile  Makefile  README.md  TODO  app.py  pyproject.toml
deployment/: deployment.yaml  ingress.yaml  service.yaml
